--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -149,44 +149,102 @@
         <img src="/img/simsimi.png" alt="" class="center-image" />
       </div>
 
-        <!-- 여기에 button-container 요소를 추가합니다.
+      <!-- 여기에 button-container 요소를 추가합니다.
       <div id="button-container"></div> -->
 
       <div class="filter-buttons">
-        <button id="top_category_01" class="filter-button" data-category-id=1 category="meal">식사</button>
-        <button id="top_category_02" class="filter-button" data-category-id=2 category="dessert">디저트</button>
-    </div>
-    <div class="sub-filter-buttons">
-        <button id="top_category_03" class="sub-filter-button" data-category-id=3 category="korean">한식</button>
-        <button id="top_category_04" class="sub-filter-button" data-category-id=4 category="chinese">중식</button>
-        <button id="top_category_05" class="sub-filter-button" data-category-id="5" category="japanese">일식</button>
-        <button id="top_category_06" class="sub-filter-button" data-category-id="6" category="western">양식</button>
-        <button id="top_category_07" class="sub-filter-button" data-category-id="7" category="indian">인도식</button>
-    </div>
+        <button
+          id="top_category_01"
+          class="filter-button"
+          data-category-id="1"
+          category="meal"
+        >
+          식사
+        </button>
+        <button
+          id="top_category_02"
+          class="filter-button"
+          data-category-id="2"
+          category="dessert"
+        >
+          디저트
+        </button>
       </div>
+      <div class="sub-filter-buttons">
+        <button
+          id="top_category_03"
+          class="sub-filter-button"
+          data-category-id="3"
+          category="korean"
+        >
+          한식
+        </button>
+        <button
+          id="top_category_04"
+          class="sub-filter-button"
+          data-category-id="4"
+          category="chinese"
+        >
+          중식
+        </button>
+        <button
+          id="top_category_05"
+          class="sub-filter-button"
+          data-category-id="5"
+          category="japanese"
+        >
+          일식
+        </button>
+        <button
+          id="top_category_06"
+          class="sub-filter-button"
+          data-category-id="6"
+          category="western"
+        >
+          양식
+        </button>
+        <button
+          id="top_category_07"
+          class="sub-filter-button"
+          data-category-id="7"
+          category="indian"
+        >
+          인도식
+        </button>
+      </div>
+
       <div class="sub-filter-buttons">
         <button
           id="top_category_08"
           class="sub-filter-button"
           category="coffee"
         >
-          커피 <!-- "category_id":8 -->
+          커피
+          <!-- "category_id":8 -->
         </button>
         <button id="top_category_09" class="sub-filter-button" category="cake">
-          케이크 <!-- "category_id":9 -->
+          케이크
+          <!-- "category_id":9 -->
         </button>
         <button id="top_category_10" class="sub-filter-button" category="bread">
-          빵 <!-- "category_id":10 -->
+          빵
+          <!-- "category_id":10 -->
         </button>
         <button
           id="top_category_11"
           class="sub-filter-button"
           category="tanghulu"
         >
-          탕후루 <!-- "category_id":11 -->
+          탕후루
+          <!-- "category_id":11 -->
         </button>
+        <!-- 여기에 추가 버튼 생성-->
+        <!-- <button id="top_category_11" class="sub-filter-button" category="test">
+          테스트
+          "category_id":12
+        </button> -->
       </div>
-      <main>
+      <main style="text-align: center">
         <div class="food-item meal">식사가 선택되었습니다.</div>
         <div class="food-item korean">한식이 선택되었습니다.</div>
         <div class="food-item chinese">중식이 선택되었습니다.</div>
@@ -202,7 +260,8 @@
     </div>
 
     <div class="button-container2">
-      <button class="button">메뉴 추천받기!</button> <!-- 버튼 클릭 시 send로 요청-->
+      <button type="submit" class="button">메뉴 추천받기!</button>
+      <!-- 버튼 클릭 시 send로 요청-->
     </div>
 
     <div class="button-container3">
