--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -23,9 +23,8 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./src/feed.js" defer></script>
+    <script src="./src/feed-create.js" defer></script>
   </head>
 
   <body>
@@ -50,8 +49,6 @@
           </div>
         </div>
       </div>
-       <!--216라인부터 245라인까지 모든 html에 복붙-->
-      <!--다른 html에서는 div class container의 div부터 해당 div가 끝나는 라인까지 복붙하면 됩니다. -->
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
@@ -77,49 +74,50 @@
         </div>
     </header>
     <!-- Header Section End -->
-    <!-- Feed Section Begin -->
-    <section class="from-blog spad">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="section-title from-blog__title">
-              <h2>Feed Page</h2>
+    <!-- Main Section Begin -->
+    <div class="contact-form spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="contact__form__title">
+                        <h2>FEED WRITE</h2>
+                    </div>
+                </div>
             </div>
-            <div class="feedbutton-wrap">
-              <button onclick= "location.href='feed-create.html'" class="site-btn">WRITE</button>
-            </div>
-            <div class="product__details__tab">
-              <ul class="nav nav-tabs" role="tablist">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    data-toggle="tab"
-                    href="#tabs-1"
-                    role="tab"
-                    aria-selected="true"
-                    >좋아요순</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    data-toggle="tab"
-                    href="#tabs-2"
-                    role="tab"
-                    aria-selected="false"
-                    >최신순</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
+            <form action="#">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="checkout__input">
+                        <p>TITLE<span>*</span></p>
+                        <input id="feedtitle" type="text" placeholder="제목은 5자 이상 입력해주세요">
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <label for="menuImage">등록하려는 찜 목록(최대 6개까지 선택 가능)<span>*</span></label>
+                        <br></br>
+                        <button id="openNewWindowBtn">담았던 상점 보기</button>
+                        <input id="favoriteid" type="text">
+                    </div>
+                    <div class="col-lg-12">
+                        <br></br>
+                        <label for="menuImage">이미지 추가<span>*</span></label>
+                        <input type="file" class="form-control" id="menuImage">
+                    </div>
+                    <div class="col-lg-12 text">
+                        <div class="checkout__input">
+                            <p>CONTENT<span>*</span></p>
+                            <textarea id="description" placeholder="내용은 20자 이상 입력해주세요"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 text-center">
+                        <button id="writeBtn" type="submit" class="site-btn">글쓰기</button>
+                        <button id="cancelBtn" class="site-btn">취소</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="row" id="feeds-container">
-        </div>
-      </div>
-    </section>
-    <!-- Feed Section End -->
-
+    </div>
+    <!-- Main Section End -->
     <!-- Footer Section Begin -->
     <footer class="footer spad">
       <div class="container">
