--- a/public/index.html
+++ b/public/index.html
@@ -474,6 +474,7 @@
     <!-- Footer Section End -->
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
+    <script src="./src/dailymenu.js" defer></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
