--- a/public/preference.html
+++ b/public/preference.html
@@ -264,7 +264,7 @@
       <section id="survey" class="form-blog spad">
       <div class="section-title">
         <h2 style="display: inline-block;">선호도 조사</h2>
-        <button class="site-btn" id="the-menu"> 메뉴판 보기 </button>
+        <button id="the-menu" class="site-btn" > 메뉴판 보기 </button>
       </div>
       
       <div class="container">
