--- a/public/mypage.html
+++ b/public/mypage.html
@@ -34,199 +34,6 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <!-- Header Section Begin -->
-    <!-- 가입 모달 -->
-    <div
-      class="modal fade"
-      id="signModal"
-      tabindex="-1"
-      aria-labelledby="signModalLabel"
-      aria-hidden="true"
-      data-bs-backdrop="static"
-      data-bs-keyboard="false"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModalLabel">SIGN UP</h5>
-            <button
-              type="button"
-              class="signbutton"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">X</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form class="sign-wrap">
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    id="admin"
-                    class="modal-input"
-                    placeholder="일반회원=0, 관리자=1"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    id="signupEmail"
-                    type="email"
-                    class="modal-input"
-                    placeholder="이메일 주소"
-                    required
-                  />
-                </div>
-                <div class="col-auto">
-                  <button
-                    class="signbutton btn-block"
-                    id="signupEmailBtn"
-                    type="button"
-                    onclick="verifyEmail()"
-                  >
-                    발송
-                  </button>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    type="인증 번호"
-                    id="codeInput"
-                    class="modal-input"
-                    placeholder="인증 코드"
-                    required
-                  />
-                </div>
-                <div class="col-auto">
-                  <button
-                    class="signbutton"
-                    id="codeInputButton"
-                    type="button"
-                    onclick="verifyCode()"
-                  >
-                    확인
-                  </button>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    type="password"
-                    class="modal-input"
-                    placeholder="비밀번호"
-                    id="signupPassword"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    type="password"
-                    class="modal-input"
-                    id="signupPasswordConfirm"
-                    placeholder="비밀번호 확인"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    type="code"
-                    class="modal-input"
-                    placeholder="닉네임"
-                    id="signupNickname"
-                    required
-                  />
-                </div>
-              </div>
-              <div
-                class="alert alert-danger"
-                id="loginError"
-                style="display: none"
-              ></div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button class="signButton" onclick="sign(event)">회원 가입</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- 가입 모달 끝 -->
-    <!-- 로그인 모달 시작 -->
-    <div
-      class="modal fade"
-      id="loginModal"
-      tabindex="-1"
-      aria-labelledby="loginModalLabel"
-      aria-hidden="true"
-      data-bs-backdrop="static"
-      data-bs-keyboard="false"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModalLabel">LOGIN</h5>
-            <button
-              type="button"
-              class="signbutton"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">X</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form class="login-wrap">
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    type="code"
-                    id="loginEmail"
-                    class="modal-input"
-                    placeholder="이메일"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col">
-                  <input
-                    type="password"
-                    id="loginPass"
-                    class="modal-input"
-                    placeholder="비밀번호"
-                    required
-                  />
-                </div>
-              </div>
-              <div
-                class="alert alert-danger"
-                id="loginError"
-                style="display: none"
-              ></div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="signbutton"
-              id="loginButton"
-              onclick="login()"
-            >
-              로그인
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- 로그인 모달 끝 -->
     <!-- 탑바 시작 -->
     <header class="header">
       <div class="header__top">
@@ -258,12 +65,7 @@
                   >
                     <i class="fa fa-user"></i>로그인
                   </a>
-                  <a
-                    href="#"
-                    id="logoutClick"
-                    class="logoutClick d-none"
-                    onclick="signOut()"
-                  >
+                  <a href="#" id="logoutClick" class="logoutClick d-none">
                     <i class="fa fa-user"></i> 로그아웃&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
@@ -279,6 +81,141 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="top-row d-flex justify-content-between align-items-center">
+          <div class="col-lg-3" style="max-width: 150px">
+            <div class="header__logo">
+              <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+            </div>
+          </div>
+          <nav class="humberger__menu__nav mobile-menu"></nav>
+          <div class="col-lg-8" style="max-width: 1000px">
+            <nav class="header__menu">
+              <ul>
+                <li>
+                  <a id="tob-bar" href="./index.html">홈</a>
+                </li>
+                <li>
+                  <a id="tob-bar" href="./preference.html">선호도 조사</a>
+                </li>
+                <li>
+                  <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
+                </li>
+                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                <li><a id="tob-bar" href="./feed.html">피드</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-lg-3" style="max-width: 200px; text-align: center">
+            <div class="header__cart">
+              <div class="header__cart__price">
+                오늘의 메뉴: <span>차돌짬뽕</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- 탑바 끝 -->
+    <section class="product spad">
+      <section class="featured-spad">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="section-title">
+                <h2>마이페이지</h2>
+              </div>
+              <div id="profile-nickName" style="margin-bottom: 50px">
+                닉네임:
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="mypage-buttons">
+        <button data-bs-toggle="modal" data-bs-target="#modifyUserModal">
+          내 정보 수정
+        </button>
+        <button data-bs-toggle="modal" data-bs-target="#deleteUserModal">
+          회원 탈퇴
+        </button>
+      </div>
+    </section>
+    <!-- 유저 정보 수정 모달 시작 -->
+    <div
+      class="modal fade"
+      id="modifyUserModal"
+      tabindex="-1"
+      aria-labelledby="modifyUserModalLabel"
+      aria-hidden="true"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modifyUserModalLabel">수정하기</h5>
+            <button
+              type="button"
+              class="signbutton"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">X</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form class="login-wrap">
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="code"
+                    class="modal-input"
+                    placeholder="변경할 닉네임"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="code"
+                    class="modal-input"
+                    placeholder="현재 비밀번호"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="code"
+                    class="modal-input"
+                    placeholder="새 비밀번호"
+                    required
+                  />
+                </div>
+              </div>
+              <div
+                class="alert alert-danger"
+                id="loginError"
+                style="display: none"
+              ></div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="signbutton"
+              data-bs-toggle="modal"
+              data-bs-target="#signupModal"
+            >
+              수정하기
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- 유저 정보 수정 모달 끝 -->
     <!-- 회원 탈퇴 모달 시작 -->
     <div
@@ -395,7 +332,6 @@
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
     <script src="./src/mypage.js"></script>
-    <script src="./src/dailymenu.js" defer></script>
     <!-- 적용하려는 script 파일 끝 -->
 
     <!-- Js Plugins -->
