--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -34,7 +34,7 @@
 
 <!-- Script -->
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="./src/foodlist.js" defer></script> 
+
 
  
 
@@ -362,7 +362,8 @@
     </footer>
     <!-- Footer Section End -->  
     <!-- 적용하려는 script 파일 -->
-    <script src="./src/user.js" defer></script>
+    <script src="./src/foodlist.js"></script> 
+    
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
