--- a/public/terms.html
+++ b/public/terms.html
@@ -30,73 +30,251 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-
-    <!-- Humberger Begin -->
-    <div class="humberger__menu__overlay"></div>
-    <div class="humberger__menu__wrapper">
-      <div class="humberger__menu__logo">
-        <a href="#"><img src="img/logo.png" alt="" /></a>
-      </div>
-      <div class="humberger__menu__cart">
-        <ul>
-          <li>
-            <a href="#"><i class="fa fa-heart"></i> <span>1</span></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a>
-          </li>
-        </ul>
-        <div class="header__cart__price">item: <span>$150.00</span></div>
-      </div>
-      <div class="humberger__menu__widget">
-        <div class="header__top__right__language">
-          <img src="img/language.png" alt="" />
-          <div>English</div>
-          <span class="arrow_carrot-down"></span>
-          <ul>
-            <li><a href="#">Spanis</a></li>
-            <li><a href="#">English</a></li>
-          </ul>
+    <!-- Header Section Begin -->
+    <!-- 가입 모달 -->
+    <div
+      class="modal fade"
+      id="signModal"
+      tabindex="-1"
+      aria-labelledby="signModalLabel"
+      aria-hidden="true"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">SIGN UP</h5>
+            <button
+              type="button"
+              class="signbutton"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">X</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form class="sign-wrap">
+              <div class="row mb-3">
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    id="signupEmail"
+                    type="email"
+                    class="modal-input"
+                    placeholder="이메일 주소"
+                    required
+                  />
+                </div>
+                <div class="col-auto">
+                  <button
+                    class="signbutton btn-block"
+                    id="signupEmailBtn"
+                    type="button"
+                    onclick="verifyEmail()"
+                  >
+                    발송
+                  </button>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="인증 번호"
+                    id="codeInput"
+                    class="modal-input"
+                    placeholder="인증 코드"
+                    required
+                  />
+                </div>
+                <div class="col-auto">
+                  <button
+                    class="signbutton"
+                    id="codeInputButton"
+                    type="button"
+                    onclick="verifyCode()"
+                  >
+                    확인
+                  </button>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="password"
+                    class="modal-input"
+                    placeholder="비밀번호"
+                    id="signupPassword"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="password"
+                    class="modal-input"
+                    id="signupPasswordConfirm"
+                    placeholder="비밀번호 확인"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="code"
+                    class="modal-input"
+                    placeholder="닉네임"
+                    id="signupNickname"
+                    required
+                  />
+                </div>
+              </div>
+              <div
+                class="alert alert-danger"
+                id="loginError"
+                style="display: none"
+              ></div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="signButton" onclick="sign(event)">회원 가입</button>
+          </div>
         </div>
-        <div class="header__top__right__auth">
-          <a href="#"><i class="fa fa-user"></i> Login</a>
-        </div>
-      </div>
-      <nav class="humberger__menu__nav mobile-menu">
-        <ul>
-          <li class="active"><a href="./index.html">Home</a></li>
-          <li><a href="./shop-grid.html">Shop</a></li>
-          <li>
-            <a href="#">Pages</a>
-            <ul class="header__menu__dropdown">
-              <li><a href="./shop-details.html">Shop Details</a></li>
-              <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-              <li><a href="./checkout.html">Check Out</a></li>
-              <li><a href="./blog-details.html">Blog Details</a></li>
-            </ul>
-          </li>
-          <li><a href="./blog.html">Blog</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div id="mobile-menu-wrap"></div>
-      <div class="header__top__right__social">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-pinterest-p"></i></a>
-      </div>
-      <div class="humberger__menu__contact">
-        <ul>
-          <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-          <li>Free Shipping for all Order of $99</li>
-        </ul>
       </div>
     </div>
-    <!-- Humberger End -->
+    <!-- 가입 모달 끝 -->
+    <!-- 로그인 모달 시작 -->
+    <div
+      class="modal fade"
+      id="loginModal"
+      tabindex="-1"
+      aria-labelledby="loginModalLabel"
+      aria-hidden="true"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">LOGIN</h5>
+            <button
+              type="button"
+              class="signbutton"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">X</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form class="login-wrap">
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="code"
+                    id="loginEmail"
+                    class="modal-input"
+                    placeholder="이메일"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    type="password"
+                    id="loginPass"
+                    class="modal-input"
+                    placeholder="비밀번호"
+                    required
+                  />
+                </div>
+              </div>
+              <div
+                class="alert alert-danger"
+                id="loginError"
+                style="display: none"
+              ></div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="signbutton"
+              id="loginButton"
+              onclick="login()"
+            >
+              로그인
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 로그인 모달 끝 -->
+    <!-- 탑바 시작 -->
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-md-6">
+              <div class="header__top__left">
+                <ul></ul>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="header__top__right">
+                <div class="header__top__right__auth d-flex">
+                  <a
+                    href="#"
+                    data-bs-toggle="modal"
+                    data-bs-target="#signModal"
+                    id="signClick"
+                    class="signClick"
+                  >
+                    <i class="fa fa-user"></i> 회원가입&nbsp;&nbsp;&nbsp;
+                  </a>
+                  <a
+                    href="#"
+                    data-bs-toggle="modal"
+                    data-bs-target="#loginModal"
+                    id="loginClick"
+                    class="loginClick"
+                  >
+                    <i class="fa fa-user"></i>로그인
+                  </a>
+                  <a
+                    href="./favoritelist.html"
+                    id="favoriteClick"
+                    class="favoriteClick d-none"
+                  >
+                    <i class="fa fa-user"></i>찜목록&nbsp;&nbsp;&nbsp;
+                  </a>
+                  <a
+                    href="./mypage.html"
+                    id="mypageClick"
+                    class="mypageClick d-none"
+                  >
+                    <i class="fa fa-user"></i>마이페이지&nbsp;&nbsp;&nbsp;
+                  </a>
+                  <a
+                    href="#"
+                    id="logoutClick"
+                    class="logoutClick d-none"
+                    onclick="signOut()"
+                  >
+                    <i class="fa fa-user"></i>로그아웃&nbsp;&nbsp;&nbsp;
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <!--여기부터-->
-    <!--주석 처리한 부분은 필요 없다고 생각될 경우 제거 예정입니다.-->
      <!-- 탑바 시작 -->
      <header class="header">
       <div class="header__top">
@@ -217,122 +395,6 @@
     </div>
     </header>
     <!-- Header Section End -->
-
-    <!-- Hero Section Begin -->
-    <section class="hero hero-normal">
-      <div class="container">
-        <!-- <div class="row">
-          <div class="col-lg-3">
-            <div class="hero__categories">
-              <div class="hero__categories__all">
-                <i class="fa fa-bars"></i>
-                <span>All departments</span>
-              </div>
-              <ul>
-                <li><a href="#">Fresh Meat</a></li>
-                <li><a href="#">Vegetables</a></li>
-                <li><a href="#">Fruit & Nut Gifts</a></li>
-                <li><a href="#">Fresh Berries</a></li>
-                <li><a href="#">Ocean Foods</a></li>
-                <li><a href="#">Butter & Eggs</a></li>
-                <li><a href="#">Fastfood</a></li>
-                <li><a href="#">Fresh Onion</a></li>
-                <li><a href="#">Papayaya & Crisps</a></li>
-                <li><a href="#">Oatmeal</a></li>
-                <li><a href="#">Fresh Bananas</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-9">
-            <div class="hero__search">
-              <div class="hero__search__form">
-                <form action="#">
-                  <div class="hero__search__categories">
-                    All Categories
-                    <span class="arrow_carrot-down"></span>
-                  </div>
-                  <input type="text" placeholder="What do yo u need?" />
-                  <button type="submit" class="site-btn">SEARCH</button>
-                </form>
-              </div>
-              <div class="hero__search__phone">
-                <div class="hero__search__phone__icon">
-                  <i class="fa fa-phone"></i>
-                </div>
-                <div class="hero__search__phone__text">
-                  <h5>+65 11.188.888</h5>
-                  <span>support 24/7 time</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
-    </section>
-    <!-- Hero Section End -->
-    <!-- Contact Section Begin -->
-    <section class="contact spad">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_phone"></span>
-              <h4>Phone</h4>
-              <p>+01-3-8888-6868</p>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_pin_alt"></span>
-              <h4>Address</h4>
-              <p>60-49 Road 11378 New York</p>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_clock_alt"></span>
-              <h4>Open time</h4>
-              <p>10:00 am to 23:00 pm</p>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_mail_alt"></span>
-              <h4>Email</h4>
-              <p>hello@colorlib.com</p>
-            </div> -->
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Contact Section End -->
-
-    <!-- Map Begin -->
-    <!-- <div class="map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd"
-        height="500"
-        style="border: 0"
-        allowfullscreen=""
-        aria-hidden="false"
-        tabindex="0"
-      ></iframe>
-      <div class="map-inside">
-        <i class="icon_pin"></i>
-        <div class="inside-widget">
-          <h4>New York</h4>
-          <ul>
-            <li>Phone: +12-345-6789</li>
-            <li>Add: 16 Creek Ave. Farmingdale, NY</li>
-          </ul>
-        </div>
-      </div>
-    </div> -->
-    <!-- Map End -->
-
-    <!-- Contact Form Begin -->
-    <!-- Contact Form End -->
-
     <footer class="footer spad">
       <div class="container">
         <div class="row">
@@ -379,6 +441,7 @@
 
     <script src="./src/admin.js"></script>
     <script src="./src/dailymenu.js" defer></script>
+    <script src="./src/user.js"></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
